# corio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh.md
bench/: CMakeLists.txt  immediate.cpp  parallel.cpp  post.cpp  sort.cpp  spawn.cpp  spawns.cpp
bench/marker/: marker.hpp  test_marker.cpp
example/: CMakeLists.txt  echo_server.cpp  http_ok_server.cpp  merge_sort.cpp  timeout.cpp
include/: corio.hpp
include/corio/: any_awaitable.hpp  corio.hpp  exceptions.hpp  gather.hpp  generator.hpp  generator_new.hpp  lazy.hpp  lazy_new.hpp  lazy_promise.hpp  operation.hpp  operators.hpp  result.hpp  run.hpp  runner.hpp  select.hpp  task.hpp  this_coro.hpp
include/corio/detail/: assert.hpp  background.hpp  collective.hpp  completion_handler.hpp  concepts.hpp  context.hpp  defer.hpp  gather.hpp  generator_promise.hpp  generator_promise_new.hpp  lazy_promise.hpp  lazy_promise_new.hpp  operation.hpp  operators.hpp  promise_base.hpp  promise_base_new.hpp  select.hpp  serial_runner.hpp  singleton.hpp  task_shared_state.hpp  this_coro.hpp  try_gather.hpp  type_traits.hpp
include/corio/detail/impl/: lazy_promise.ipp  lazy_promise_new.ipp  promise_base.ipp
include/corio/impl/: any_awaitable.ipp  generator.ipp  generator_new.ipp  lazy.ipp  lazy_new.ipp  lazy_promise.ipp  result.ipp  run.ipp  runner.ipp  task.ipp  this_coro.ipp
test/: CMakeLists.txt  test_any_awaitable.cpp  test_assert.cpp  test_completion_handler.cpp  test_gather.cpp  test_generator.cpp  test_generator_new.cpp  test_lazy.cpp  test_lazy_new.cpp  test_operation.cpp  test_result.cpp  test_run.cpp  test_runner.cpp  test_select.cpp  test_serial_runner.cpp  test_task.cpp  test_this_coro.cpp  test_type_traits.cpp
